Address first round of review